# OpenGLSGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.zed/: tasks.json
include/: Camera.hpp  EngineFlags.hpp  Mesh.hpp  Node.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Transform.hpp  Triangle.hpp  Vertex.hpp
include/glad/: glad.h
shaders/: vertex.glsl
src/: Node.cpp  Transform.cpp  Triangle.cpp  Vertex.cpp
src/glad/: glad.c
